# swagger/v1/swagger.yaml
@@ -86,6 +86,84 @@ paths:
                     default: false
                   message:
                     type: string
+  "/v1/sms/send_individual":
+    post:
+      summary: crea un registro de envio para queluego sea enviado
+      tags:
+      - Connectus v1 sms
+      description: Este tiene validaciones de saldo, cantidad de carateres y formato
+        UTF-8
+      parameters:
+      - name: Authorization
+        in: header
+        required: true
+      responses:
+        '200':
+          description: success!!!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  data:
+                    type: object
+                    properties:
+                      unique_id:
+                        type: string
+        '404':
+          description: Registro no encontrado !!!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  message:
+                    type: string
+        '403':
+          description: Forbidden !!!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  message:
+                    type: string
+        '422':
+          description: Texto no permido, numero vacio o texto vacio !!!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  message:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                send_individual:
+                  type: object
+                  properties:
+                    country_id:
+                      type: string
+                    sms_content:
+                      type: string
+                    dst_number:
+                      type: string
   "/v1/sms/validations/balance":
     get:
       summary: valida si posee saldo
